--- a/indext.html/indext.html
+++ b/indext.html/indext.html
@@ -10,5 +10,9 @@
  <p> My introduse</p> 
 <p>I am a profetional social media manager.Beside I learn web developer coursewe </p>
 <p>my name is Rakib alli</p>
+<img src="rakib.png" alt="">
+<p>Hi, I am a profational social media manager. I have complerted a long time course from outsorcing institute in bangladesh. </p>
+<p> Now i am expert in facebook, Instagram, linked in and twitter marketing.
+</p>
 </body>
 </html>
