--- a/indext.html/indext.html
+++ b/indext.html/indext.html
@@ -6,13 +6,7 @@
     <title>My first web side</title>
 </head>
 <body>
- <p>My first web side</p>  
- <p> My introduse</p> 
-<p>I am a profetional social media manager.Beside I learn web developer coursewe </p>
-<p>my name is Rakib alli</p>
-<img src="rakib.png" alt="">
-<p>Hi, I am a profational social media manager. I have complerted a long time course from outsorcing institute in bangladesh. </p>
-<p> Now i am expert in facebook, Instagram, linked in and twitter marketing.
-</p>
+ <img src="digital marketing (1).png" alt="">
 </body>
 </html>
+
