--- a/indext.html/indext.html
+++ b/indext.html/indext.html
@@ -7,6 +7,7 @@
 </head>
 <body>
  <img src="digital marketing (1).png" alt="">
+ <p>I am a profational social media manager. I have complet a long time course from outsorceing institute in bangladesh.</p>
 </body>
 </html>
 
